# hr-companion

./: LICENSE  embeddings.py  llm.py  main.py  pyproject.toml  rag.py  vector_store.py
supervisor/: __init__.py  graph.py  llm.py  main.py  state.py  supervisor.py
supervisor/agents/: __init__.py  cover_letter_analyzer.py  final_ranker.py  job_matcher.py  linkedin_analyzer.py  resume_analyzer.py
supervisor/tools/: __init__.py  linkedin_scraper.py  pdf_parser.py
